@@ -1,0 +1,22 @@
+#
+# This file is part of pyasn1-alt-modules software.
+#
+# Created by Russ Housley.
+#
+# Copyright (c) 2023, Vigil Security, LLC
+# License: http://vigilsec.com/pyasn1-alt-modules-license.txt
+#
+# GOST R 34.10-2012 Algorithm for IKEv2
+#
+# ASN.1 source from:
+# https://www.rfc-editor.org/rfc/rfc9385.txt
+#
+
+from pyasn1_alt_modules import rfc9215
+
+
+# Imports from RFC 9215
+
+id_tc26_signwithdigest_gost3410_12_256 = rfc9215.id_tc26_signwithdigest_gost3410_2012_256
+
+id_tc26_signwithdigest_gost3410_12_512 = rfc9215.id_tc26_signwithdigest_gost3410_2012_512
