@@ -172,7 +172,9 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc9310.suite',
      'tests.test_rfc9323.suite',
      'tests.test_rfc9336.suite',
-     'tests.test_rfc9337.suite']
+     'tests.test_rfc9337.suite',
+     'tests.test_rfc9385.suite']
+
 )
 
 
